change background image. fix image truncate

--- a/css/main.css
+++ b/css/main.css
@@ -1493,9 +1493,9 @@ header .header-logo a {
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 768px) {
   header .header-logo a {
-    width: 51px;
-    height: 24px;
-    background-size: 51px 24px;
+    width: 150px;
+    height: 35px;
+    background-size: 100% 100%;
   }
 }
 @media only screen and (max-width: 400px) {
@@ -1513,7 +1513,7 @@ header .header-logo a {
   width: 100%;
   height: 100%;
   background-color: #151515;
-  background-image: url(../images/samantha-bretous-presenting-demo.jpg);
+  background-image: url(../images/lee-campbell-106610.jpg);
   background-repeat: no-repeat;
   background-position: center 30%;
   -webkit-background-size: cover;
